crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__emit_tests__alternations_captured.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = [(identifier) (number)] @value
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "value"
S2 "Test"
S3 "identifier"
S4 "number"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { value }

[type_members]
M0: S1 → T0  ; value: <Node>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   ε                                    10, 12
  09                                        ▶
  10   !   (identifier) [Node Set(M0)]      09
  12   !   (number) [Node Set(M0)]          09
