crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__emit_tests__alternations_captured_tagged.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = [A: (identifier) @a  B: (number) @b] @item
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "a"
S2 "b"
S3 "A"
S4 "B"
S5 "item"
S6 "Test"
S7 "identifier"
S8 "number"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { a }
T2 = Struct  M1:1  ; { b }
T3 = Enum    M2:2  ; A | B
T4 = Struct  M4:1  ; { item }

[type_members]
M0: S1 → T0  ; a: <Node>
M1: S2 → T0  ; b: <Node>
M2: S3 → T1  ; A: T1
M3: S4 → T2  ; B: T2
M4: S5 → T3  ; item: T3

[type_names]
N0: S6 → T4  ; Test

[entrypoints]
Test = 06 :: T4

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   ε                                    12, 15
  09                                        ▶
  10   ε   [Set(M4)]                        09
  12   !   [Enum(M2)] (identifier) [Node Set(M0) EndEnum]  10
  15   !   [Enum(M3)] (number) [Node Set(M1) EndEnum]  10
