crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__emit_tests__alternations_no_internal_captures.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (program [(identifier) (number)] @x)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "x"
S2 "Test"
S3 "program"
S4 "identifier"
S5 "number"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { x }

[type_members]
M0: S1 → T0  ; x: <Node>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   !   (program)                        08
  08   ε                                    11, 13
  10                                        ▶
  11 !!▽   (identifier) [Node Set(M0)]      15
  13 !!▽   (number) [Node Set(M0)]          15
  15   △                                    10
