crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__emit_tests__alternations_tagged_in_field_constraint.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (foo field: [A: (x) @a B: (y)] @kind)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "a"
S2 "A"
S3 "B"
S4 "kind"
S5 "Test"
S6 "foo"
S7 "field"
S8 "x"
S9 "y"

[type_defs]
T0 = <Void>
T1 = <Node>
T2 = Struct  M0:1  ; { a }
T3 = Enum    M1:2  ; A | B
T4 = Struct  M3:1  ; { kind }

[type_members]
M0: S1 → T1  ; a: <Node>
M1: S2 → T2  ; A: T2
M2: S3 → T0  ; B: <Void>
M3: S4 → T3  ; kind: T3

[type_names]
N0: S5 → T4  ; Test

[entrypoints]
Test = 06 :: T4

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   !   (foo)                            08
  08   ▽   field: _                         09
  09   ε                                    12, 15
  11                                        ▶
  12   !   [Enum(M1)] (x) [Node Set(M0) EndEnum Set(M3)]  17
  15   !   [Enum(M2)] (y) [EndEnum Set(M3)]  17
  17   △                                    11
